2023-03-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/gen.c,
	  support/regression/tests/bug-3556.c:
	  Fix an issue in pdk shift codegen for non-dead shift amount in acc.

2023-03-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  support/regression/tests/bug-3564.c:
	  Fix bug #3564.

2023-03-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bigreturn-remat.c.in,
	  support/regression/tests/rotate.c.in:
	  Improve test coverage.

2023-03-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/atomic.c,
	  support/regression/tests/bug-1918.c,
	  support/regression/tests/bug-2124.c,
	  support/regression/tests/bug-2181.c,
	  support/regression/tests/bug-2271.c,
	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug-2455.c,
	  support/regression/tests/bug-2497.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c:
	  Document why some regression tests are disabled for pdk.
	* device/include/mcs51/stc89.h,
	  src/SDCC.y,
	  src/SDCCmem.c,
	  src/SDCCsymt.c:
	  Fix typos.
	* src/SDCCicode.c:
	  Fix bug #3290.

2023-02-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/rtrack.c: placed all comment emitting code in D(),
	  (_mcs51_rtrackUpdate): enabled literal mov to register part by removing D(),
	                         enabled tracking dptr by removing if(options.verboseAsm)
	* device/lib/ds390/Makefile.in,
	* device/lib/ds390/lcd390.c: removed buggy lcd390.c, the DS80C390 has no native LCD interface

2023-02-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCloop.c,
	  support/regression/tests/bug-3560.c:
	  Fix bug #3560.

2023-02-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/_minimal.c: